force-app/main/default/objects/Opportunity/fields/Owner_SHO__c.field-meta.xml
<CustomField>
    <fullName>Owner_SHO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsible from PS-SHO for this Strategic Business Opportunity</description>
    <inlineHelpText>Responsible from PS-SHO for this Strategic Business Opportunity</inlineHelpText>
    <label>Owner SHO</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard,PowerPartner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesSHO</relationshipName>
    <type>Lookup</type>
</CustomField>