force-app/main/default/objects/Opportunity/fields/OwnerDifferent__c.field-meta.xml
<CustomField>
    <fullName>OwnerDifferent__c</fullName>
    <description>Used to search for opportunities owned by different account owner</description>
    <formula>IF(Account.OwnerId = OwnerId , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if opportunity owner different from account owner</inlineHelpText>
    <label>OwnerDifferent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>