force-app/main/default/objects/Opportunity/fields/Pain_Relievers__c.field-meta.xml
<CustomField>
    <fullName>Pain_Relievers__c</fullName>
    <description>Added on request OpenIssues52917</description>
    <inlineHelpText>How does our solution alleviate problems, obstacles and risk our customer encounters?</inlineHelpText>
    <label>Pain Relievers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>