force-app/main/default/objects/Opportunity/fields/Pains__c.field-meta.xml
<CustomField>
    <fullName>Pains__c</fullName>
    <description>Added on request OpenIssues52917</description>
    <inlineHelpText>Describe problems, challenges, obstacles and risks the customer is encountering</inlineHelpText>
    <label>Pains</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>