force-app/main/default/objects/Opportunity/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash in advance</fullName>
            </value>
            <value>
                <fullName>Cash on delivery</fullName>
            </value>
            <value>
                <fullName>30 days end of month net</fullName>
            </value>
            <value>
                <fullName>30 days net</fullName>
            </value>
            <value>
                <fullName>30 days upon approved credit</fullName>
            </value>
            <value>
                <fullName>60 days net</fullName>
            </value>
            <value>
                <fullName>L/C irrevocable and confirmed</fullName>
            </value>
            <value>
                <fullName>Pre-Payment</fullName>
            </value>
            <value>
                <fullName>T/T in advance</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>