force-app/main/default/objects/Opportunity/fields/Prev_Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Prev_Owner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be used to store previous owner (Contact linked to Partner User). Made for project IN_SFC_PALIUP</description>
    <label>Prev Owner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Prev Owner Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>