force-app/main/default/objects/Opportunity/fields/Previous_Stage_del__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage_del__c</fullName>
    <inlineHelpText>Captures the previous stage of the opportunity. Enables the selection of design wins.</inlineHelpText>
    <label>Previous Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>