force-app/main/default/objects/Opportunity/fields/Prod1Name__c.field-meta.xml
<CustomField>
    <fullName>Prod1Name__c</fullName>
    <formula>Product_1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod1Name</label>
    <type>Text</type>
</CustomField>