force-app/main/default/objects/Opportunity/fields/Prod2Name__c.field-meta.xml
<CustomField>
    <fullName>Prod2Name__c</fullName>
    <formula>Product_2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod2Name</label>
    <type>Text</type>
</CustomField>