force-app/main/default/objects/Opportunity/fields/Prod3Name__c.field-meta.xml
<CustomField>
    <fullName>Prod3Name__c</fullName>
    <formula>Product_3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod3Name</label>
    <type>Text</type>
</CustomField>