force-app/main/default/objects/Opportunity/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Filled automatically with the added Opp Product (1st in the related list).</inlineHelpText>
    <label>Product 1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Product 1)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>