force-app/main/default/objects/Opportunity/fields/Product_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Filled automatically with the added Opp Product (2nd in the related list).</inlineHelpText>
    <label>Product 2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Product 2)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>