force-app/main/default/objects/Opportunity/fields/Product_3__c.field-meta.xml
<CustomField>
    <fullName>Product_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Filled automatically with the added Opp Product (3rd in the related list).</inlineHelpText>
    <label>Product 3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Product 3)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>