force-app/main/default/objects/Opportunity/fields/ProductsCombo__c.field-meta.xml
<CustomField>
    <fullName>ProductsCombo__c</fullName>
    <formula>Product_1__r.Name &amp; &apos; &apos; &amp; Product_2__r.Name &amp; &apos; &apos; &amp; Product_3__r.Name &amp; &apos; &apos; &amp; Product_4__r.Name &amp; &apos; &apos; &amp; Product_5__r.Name</formula>
    <label>Products</label>
    <type>Text</type>
</CustomField>