force-app/main/default/objects/Opportunity/fields/Proto_Date__c.field-meta.xml
<CustomField>
    <fullName>Proto_Date__c</fullName>
    <inlineHelpText>Proto Date: first prototype build.
If Opportunity is converted from Lead, this is copied from Lead.</inlineHelpText>
    <label>Proto Date</label>
    <type>Date</type>
</CustomField>