force-app/main/default/objects/Opportunity/fields/Quotation_Account__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to create related list that only shows quotation or opportunity. If the record type is opportunity, than it is blank.</description>
    <label>Quotation Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>