force-app/main/default/objects/Opportunity/fields/Quotation_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Reference_Number__c</fullName>
    <formula>IF(
  AND(RecordType.Id=&quot;01220000000CqRd&quot;,NOT(ISBLANK(OppAutoNumber__c))),
  &quot;QR-&quot;&amp;OppAutoNumber__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quotation Reference Number</label>
    <type>Text</type>
</CustomField>