force-app/main/default/objects/Opportunity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Win or loss reason. Required when Stage is 1 Lost, 5 Design-in, 6 Prototypes, 7 Pre-Production, and 8 Production.</description>
    <inlineHelpText>Win or loss reason. Required when Stage is 1 Lost, 5 Design-in, 6 Prototypes, 7 Pre-Production, and 8 Production.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Auto Closure</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Duplicate Entry</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Incumbent</fullName>
            </value>
            <value>
                <fullName>Micro Opportunity</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Poor Opp Qualification</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Project Stopped</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>T&amp;C</fullName>
            </value>
            <value>
                <fullName>No Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>