force-app/main/default/objects/Opportunity/fields/Referred_Account_SF_Number__c.field-meta.xml
<CustomField>
    <fullName>Referred_Account_SF_Number__c</fullName>
    <formula>Referred_Opportunity_Account__r.SF_Account_Number__c</formula>
    <label>Referred Account SF Number</label>
    <type>Text</type>
</CustomField>