force-app/main/default/objects/Opportunity/fields/Referred_Account_ubOffice__c.field-meta.xml
<CustomField>
    <fullName>Referred_Account_ubOffice__c</fullName>
    <formula>TEXT(Referred_Opportunity_Account__r.uB_Office__c)</formula>
    <label>Referred Account ubOffice</label>
    <type>Text</type>
</CustomField>