force-app/main/default/objects/Opportunity/fields/Referred_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Referred_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quotation referring to specific opportunity</description>
    <label>Referred Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>List of Quotations</relationshipLabel>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>