force-app/main/default/objects/Opportunity/fields/Referred_Opportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_Opportunity_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Quotation appears in this Account under Partner Quotations.</description>
    <inlineHelpText>This Quotation appears in this Account under Partner Quotations.</inlineHelpText>
    <label>Referred Opportunity Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Quotations</relationshipLabel>
    <relationshipName>ReferredOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>