force-app/main/default/objects/Opportunity/fields/Referred_Opportunity_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Referred_Opportunity_Account_ID__c</fullName>
    <description>TO BE DELETED: Only added to populate Opportunity Account in Quotation</description>
    <formula>Referred_Opportunity__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TO BE DELETED: Only added to populate Opportunity Account in Quotation</inlineHelpText>
    <label>Referred Opportunity Account ID</label>
    <type>Text</type>
</CustomField>