force-app/main/default/objects/Opportunity/fields/Referred_Opportunity_Distribution_Info__c.field-meta.xml
<CustomField>
    <fullName>Referred_Opportunity_Distribution_Info__c</fullName>
    <description>Formula used in Disty Quotes. To be used only for Mail Merge!</description>
    <formula>IF(ISBLANK(Referred_Opportunity__r.Registration_No__c),&apos;&apos;,Referred_Opportunity__r.Registration_No__c + &apos; (&apos; + TEXT(Referred_Opportunity__r.Distribution_Method__c) + &apos;)&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred Opportunity Distribution Info</label>
    <type>Text</type>
</CustomField>