force-app/main/default/objects/Opportunity/fields/Referred_Opportunity_Reason__c.field-meta.xml
<CustomField>
    <fullName>Referred_Opportunity_Reason__c</fullName>
    <formula>TEXT(Referred_Opportunity__r.Reason__c)</formula>
    <label>Referred Opportunity Reason</label>
    <type>Text</type>
</CustomField>