force-app/main/default/objects/Opportunity/fields/Referred_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Referred_Opportunity_Stage__c</fullName>
    <formula>IF(ISBLANK(Referred_Opportunity__c),&quot;&quot;,TEXT(Referred_Opportunity__r.StageName))</formula>
    <label>Referred Opportunity Stage</label>
    <type>Text</type>
</CustomField>