force-app/main/default/objects/Opportunity/fields/Registration_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Created_Date__c</fullName>
    <label>Registration Created Date</label>
    <type>Date</type>
</CustomField>