force-app/main/default/objects/Opportunity/fields/Registration_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expiration__c</fullName>
    <description>Date of Registration expiration (6 mos from Approval).</description>
    <inlineHelpText>Date of Registration expiration (6 mos from Approval).</inlineHelpText>
    <label>Registration Expiration</label>
    <type>Date</type>
</CustomField>