force-app/main/default/objects/Opportunity/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <description>Assigned by u-blox Sales Operations - upon Approval of Registration.</description>
    <inlineHelpText>Assigned by u-blox Sales Operations - upon Approval of Registration.</inlineHelpText>
    <label>Registration No</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>