force-app/main/default/objects/Opportunity/fields/Remark_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Remark_Contribution__c</fullName>
    <inlineHelpText>Comment for contribution split</inlineHelpText>
    <label>Remark Contribution</label>
    <type>TextArea</type>
</CustomField>