force-app/main/default/objects/Opportunity/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Remarks for the quotation</description>
    <inlineHelpText>Remarks for the quotation</inlineHelpText>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>