force-app/main/default/objects/Opportunity/fields/Revenue_unweighted__c.field-meta.xml
<CustomField>
    <fullName>Revenue_unweighted__c</fullName>
    <description>Unweighted revenue independent of Opp status</description>
    <inlineHelpText>Unweighted revenue independent of Opp status</inlineHelpText>
    <label>Revenue unweighted</label>
    <summarizedField>Opp_Product__c.Pipeline_Revenue__c</summarizedField>
    <summaryForeignKey>Opp_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>