force-app/main/default/objects/Opportunity/fields/SBO_CEL__c.field-meta.xml
<CustomField>
    <fullName>SBO_CEL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Strategic Business Opportunity for Product Center Cellular, editable for Product Strategy teams</description>
    <inlineHelpText>Strategic Business Opportunity for Product Center Cellular, editable for Product Strategy teams</inlineHelpText>
    <label>SBO CEL</label>
    <type>Checkbox</type>
</CustomField>