force-app/main/default/objects/Opportunity/fields/SBO_PC_SER__c.field-meta.xml
<CustomField>
    <fullName>SBO_PC_SER__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Strategic Business Opportunity for Product Center Services, editable for Product Strategy teams</description>
    <inlineHelpText>Strategic Business Opportunity for Product Center Services, editable for Product Strategy teams</inlineHelpText>
    <label>SBO SER</label>
    <type>Checkbox</type>
</CustomField>