force-app/main/default/objects/Opportunity/fields/SBO_POS__c.field-meta.xml
<CustomField>
    <fullName>SBO_POS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Strategic Business Opportunity for Product Center Positioning, editable for Product Strategy teams</description>
    <inlineHelpText>Strategic Business Opportunity for Product Center Positioning, editable for Product Strategy teams</inlineHelpText>
    <label>SBO POS</label>
    <type>Checkbox</type>
</CustomField>