force-app/main/default/objects/Opportunity/fields/SBO_SHO__c.field-meta.xml
<CustomField>
    <fullName>SBO_SHO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Strategic Business Opportunity for Product Center Short Range, editable for Product Strategy teams</description>
    <inlineHelpText>Strategic Business Opportunity for Product Center Short Range, editable for Product Strategy teams</inlineHelpText>
    <label>SBO SHO</label>
    <type>Checkbox</type>
</CustomField>