force-app/main/default/objects/Opportunity/fields/Send_mail_with_info__c.field-meta.xml
<CustomField>
    <fullName>Send_mail_with_info__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When you check the box, a mail with the main information will be sent to the account owner. This can be forwarded to a customer or distributor for an update.</inlineHelpText>
    <label>Send mail with opportunity information</label>
    <type>Checkbox</type>
</CustomField>