force-app/main/default/objects/Opportunity/fields/Services_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Services_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Services Opportunity</label>
    <type>Checkbox</type>
</CustomField>