force-app/main/default/objects/Opportunity/fields/Services_Opportunity_Approval_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Services_Opportunity_Approval_Criteria__c</fullName>
    <formula>Services_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services Opportunity Approval Criteria</label>
    <type>Checkbox</type>
</CustomField>