force-app/main/default/objects/Opportunity/fields/SF_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SF_Account_Number__c</fullName>
    <formula>Account.SF_Account_Number__c</formula>
    <inlineHelpText>SF Account Number of the Opportunity Account</inlineHelpText>
    <label>SF Account Number</label>
    <type>Text</type>
</CustomField>