force-app/main/default/objects/Opportunity/fields/Special_Price_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Price_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Special Price Request (if exists, for PPP mandatory)</inlineHelpText>
    <label>Special Price Request</label>
    <referenceTo>Special_Price_Request__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>