force-app/main/default/objects/Opportunity/fields/Start_Prod_In_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Prod_In_Year__c</fullName>
    <description>Added for PS-POS MDM dashboard. If 1, Start Production is between today and next 364 days. If 2, it is between 365-730 from today.</description>
    <formula>IF(CloseDate&lt;TODAY(),0,FLOOR((CloseDate-TODAY())/365)+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Added for PS-POS MDM dashboard. If 1, Start Production is between today and next 364 days. If 2, it is between 365-730 from today.</inlineHelpText>
    <label>Start Prod In Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>