force-app/main/default/objects/Opportunity/fields/Strategic_Focus__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Focus__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Focus opportunity for the company. Defined by management.</inlineHelpText>
    <label>DO NOT USE Strategic Focus</label>
    <type>Checkbox</type>
</CustomField>