force-app/main/default/objects/Opportunity/fields/Sum_Of_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Ranking__c</fullName>
    <description>Used for validation rule of Stage. If this is 0, then the stage should be Lost.</description>
    <label>Sum Of Ranking</label>
    <summarizedField>Opp_Product__c.Ranking__c</summarizedField>
    <summaryForeignKey>Opp_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>