force-app/main/default/objects/Opportunity/fields/Team_Focus__c.field-meta.xml
<CustomField>
    <fullName>Team_Focus__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Focus of sales team</inlineHelpText>
    <label>Team Focus</label>
    <type>Checkbox</type>
</CustomField>