force-app/main/default/objects/Opportunity/fields/Team_members__c.field-meta.xml
<CustomField>
    <fullName>Team_members__c</fullName>
    <description>Sales persons involved in the opportunity</description>
    <inlineHelpText>Select the sales persons involved in the opportunity. If they are in a different area, grant access by adding them to the account team.</inlineHelpText>
    <label>Team Members</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adam Andres</fullName>
            </value>
            <value>
                <fullName>Adam Strout</fullName>
            </value>
            <value>
                <fullName>Adrian Tan</fullName>
            </value>
            <value>
                <fullName>Amitesh Bajaj</fullName>
            </value>
            <value>
                <fullName>Anthony Protopsaltis</fullName>
            </value>
            <value>
                <fullName>Armin Böshenz</fullName>
            </value>
            <value>
                <fullName>Brad Sherrard</fullName>
            </value>
            <value>
                <fullName>Bruce Wu</fullName>
            </value>
            <value>
                <fullName>Carine Loo</fullName>
            </value>
            <value>
                <fullName>Carlos Dias</fullName>
            </value>
            <value>
                <fullName>Daniel Jungo</fullName>
            </value>
            <value>
                <fullName>David Sel</fullName>
            </value>
            <value>
                <fullName>Derek Wang</fullName>
            </value>
            <value>
                <fullName>Dylan Huang</fullName>
            </value>
            <value>
                <fullName>Ellen Huang</fullName>
            </value>
            <value>
                <fullName>Federico Dal Ferro</fullName>
            </value>
            <value>
                <fullName>Frederic Duhem</fullName>
            </value>
            <value>
                <fullName>Fredrik Borgstrom</fullName>
            </value>
            <value>
                <fullName>Henry You</fullName>
            </value>
            <value>
                <fullName>Hiroshi Yoshimura</fullName>
            </value>
            <value>
                <fullName>Jan Reisen</fullName>
            </value>
            <value>
                <fullName>Jason Meilhon</fullName>
            </value>
            <value>
                <fullName>Jean-Marie Dubois</fullName>
            </value>
            <value>
                <fullName>JeeHoon Kim</fullName>
            </value>
            <value>
                <fullName>Jennifer Nkire</fullName>
            </value>
            <value>
                <fullName>Jim Neff</fullName>
            </value>
            <value>
                <fullName>Jochen Steinhauer</fullName>
            </value>
            <value>
                <fullName>John Demirali</fullName>
            </value>
            <value>
                <fullName>Krystal Li</fullName>
            </value>
            <value>
                <fullName>Leo DeRosa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>