force-app/main/default/objects/Opportunity/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>CASESAFEID( RecordTypeId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <type>Text</type>
</CustomField>