force-app/main/default/objects/Opportunity/fields/Type_of_quotation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_quotation__c</fullName>
    <description>Is the quotation budgetary or binding?</description>
    <inlineHelpText>Is the quotation budgetary or binding?</inlineHelpText>
    <label>Type of Quotation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quotation</fullName>
                <default>true</default>
                <label>Quotation</label>
            </value>
            <value>
                <fullName>Budgetary Quotation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>