force-app/main/default/objects/Opportunity/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Use_Case</valueSetName>
    </valueSet>
</CustomField>