force-app/main/default/objects/Opportunity/fields/Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Value_Proposition__c</fullName>
    <description>Added on request OpenIssues52917</description>
    <inlineHelpText>What does the product help the customer to accomplish his jobs?
[Create, raise, reduce, eliminate]</inlineHelpText>
    <label>Value Proposition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>