force-app/main/default/objects/Opportunity/recordTypes/Quotation.recordType-meta.xml
<RecordType>
    <fullName>Quotation</fullName>
    <active>true</active>
    <businessProcess>Quotation</businessProcess>
    <label>Quotation</label>
</RecordType>