force-app/main/default/objects/Opportunity/validationRules/Description_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_required</fullName>
    <active>false</active>
    <errorConditionFormula>RecordTypeId=&quot;01220000000CqRn&quot; &amp;&amp;
ISBLANK( Description ) &amp;&amp;
NOT(
ISPICKVAL(StageName,&quot;0 Competition&quot;) ||
ISPICKVAL(StageName,&quot;1 Lost&quot;) ||
ISPICKVAL(StageName,&quot;9 Closed - EoL&quot;)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Description is required.</errorMessage>
</ValidationRule>