force-app/main/default/objects/Opportunity/validationRules/Focus_needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Focus_needed</fullName>
    <active>true</active>
    <description>Focus is mandatory except Stage 0,1,2,9.</description>
    <errorConditionFormula>RecordTypeId=&quot;01220000000CqRn&quot; &amp;&amp;
isblank(text(Focus__c)) &amp;&amp;
not(text(StageName)=&quot;0 Competition&quot;||text(StageName)=&quot;1 Lost&quot;||text(StageName)=&quot;2 Inactive&quot;||text(StageName)=&quot;9 Closed - EoL&quot;) &amp;&amp;
not($User.ProfileId=&quot;00e20000000ki5l&quot;||$User.ProfileId=&quot;00e20000000xThb&quot;||$User.ProfileId=&quot;00eD00000016L3v&quot;)</errorConditionFormula>
    <errorDisplayField>Focus__c</errorDisplayField>
    <errorMessage>Focus is required.</errorMessage>
</ValidationRule>